parslers-benchmark/src/tests/invalid/syntaxErr/basic/multipleBegins.wacc
# begin missing closing end

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin 
  skip 
end

begin 
  skip 
end
